--- a/EDA2017/EDA2017.vcxproj.filters
+++ b/EDA2017/EDA2017.vcxproj.filters
@@ -17,5 +17,9 @@
   <ItemGroup>
     <None Include="EDA2017.ino" />
   </ItemGroup>
- 
+  <ItemGroup>
+    <ClInclude Include="__vm\.EDA2017.vsarduino.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
